2008-02-19  Jaroslav Hajek <highegg@gmail.com>

	* *.h *c *.cc: adjusted C/C++ sources to meet GNU coding standards

2008-02-18  Jaroslav Hajek <highegg@gmail.com>

	* forsubs.h gprmod.h predict.c train.c setup.c: added const modifiers
	where appropriate.
	* grp_train,gpr_predict: replaced Array::fortran_vec with Array::data
	where appropriate, to prevent unnecessary copying.

2008-02-15  Jaroslav Hajek <highegg@gmail.com>

	* octgpr.m: improved demo.

2008-02-13  Jaroslav Hajek <highegg@gmail.com>

	* train.c: correct allocation and copying result values.
	* nldgpr.f: compute 2nd derivative by a better formula.
	* gpr_train.cc: improved documentation
	* gpr_predict.cc: improved documentation

2008-02-12  Jaroslav Hajek <highegg@gmail.com>

	* dscrot.f: correct the W*D*x and W'*D*x sequence.
	* optdrv.f: correct calls to dscrot.f

2008-02-08  Jaroslav Hajek <highegg@gmail.com>

	* train.c: corrected C->Fortran calls in to use proper #defines from forsubs.h
	* vmfac.f vmcmp.f trstep.f: deleted (no use)
	* optdrv.f: cosmetic changes 
	* ../inst/demo_octgpr.m: added copyright 
	* ../TODO: modified

2008-02-07  Jaroslav Hajek <highegg@gmail.com>

	* gpr_train.cc: corrected inline Texinfo documentation 
	* ChangeLog: added this file
