@@ -1,6 +1,6 @@
 Name: OctGPR
-Version: 1.1.1
-Date: 2008-08-02
+Version: 1.1.2
+Date: 2008-24-02
 Author: Jaroslav Hajek (highegg@gmail.com)
 Title: Package for full dense Gaussian Process Regression
 Maintainer: Jaroslav Hajek (highegg@gmail.com)
